--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,12 @@
     <string name="settings_ingredients">Ingredients</string>
     <string name="settings_bluetooth">Bluetooth</string>
 
+
+
+
+    <!-- Settings -->
+    <string name="settings">Settings</string>
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
